# MigrationMind

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  migrationmind.yml
examples/migrations/: 0001_create_users.sql  0042_add_last_active.sql  0043_drop_legacy_columns.sql
examples/schemas/: ecommerce_schema.sql
migrationmind/: __init__.py  cli.py  config.py
migrationmind/llm/: __init__.py  client.py  prompts.py  reasoner.py
migrationmind/models/: __init__.py  config.py  diff.py  operation.py  report.py  schema.py
migrationmind/reporters/: __init__.py  json_reporter.py  markdown.py  terminal.py
migrationmind/rules/: __init__.py  base.py
migrationmind/stages/: __init__.py  lock_engine.py  parser.py  pipeline.py  query_impact.py  rollback_analyzer.py  schema_diff.py
migrationmind/utils/: __init__.py  file_utils.py
tests/: __init__.py  test_lock_engine.py  test_parser.py  test_query_impact.py  test_reporter.py  test_rollback.py  test_schema_diff.py
tests/fixtures/migrations/: create_index_blocking.sql  drop_column.sql  multi_operation.sql  risky_not_null.sql  simple_add_column.sql
tests/fixtures/schemas/: users_table.sql
